[package]
name = "discount-rate-model"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
path = "src/contract.rs"

[dependencies.multiversx-sc]
version = "0.53.0"

[dependencies]
admin = { git = "ssh://git@github.com/HatomProtocol/hatom-admin-module", branch = "develop" }

[dependencies.controller]
path = "../controller"

[dependencies.money-market]
path = "../money-market"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.53.0"
