[package]
name = "money-market"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
path = "src/contract.rs"

[dependencies]
admin = { git = "ssh://git@github.com/HatomProtocol/hatom-admin-module", branch = "develop" }

[dependencies.interest-rate-model]
path = "../interest-rate-model"

[dependencies.controller]
path = "../controller"

[dependencies.multiversx-sc]
version = "0.53.0"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"
csv = "1.1"
bigdecimal = "0.4.3"

[dev-dependencies.oracle]
path = "../oracle"

[dev-dependencies.multiversx-sc-scenario]
version = "0.53.0"

[dev-dependencies.serde]
version = "1"
features = ["derive"]
