[package]
name = "oracle"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
path = "src/contract.rs"

[dependencies]
admin = { git = "ssh://git@github.com/HatomProtocol/hatom-admin-module", branch = "develop" }

[dependencies.multiversx-sc]
version = "0.53.0"

[dev-dependencies.multiversx-sc-scenario]
version = "0.53.0"
